--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'	// validation 사용
 	implementation 'org.projectlombok:lombok'
+	// https://mvnrepository.com/artifact/org.passay/passay
+	implementation group: 'org.passay', name: 'passay', version: '1.6.4'
 	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
